# nlw-22-computer-vision-app

./: .gitignore  README.md  app.py  main.py  pyproject.toml
assets/: script.js
assets/css/: style.css
assets/js/: script.js
core/: __init__.py  config.py  detector.py  gesture_recognizer.py  io_utils.py  processor.py  settings.py  utils.py  vision_gesture_engine.py  webcam_recog.py
notebooks/: clipseg_segmentation.ipynb  dataset_management.ipynb  gemini_vision.ipynb  gesture_data_recorder.ipynb  gesture_model_training.ipynb  mobilenet_classification.ipynb  webcam_mediapipe.ipynb  webcam_object_detection.ipynb  yolos_object_detection.ipynb
scripts/: git_amend.sh  kill_kernels.sh  kill_port.sh
src/recog_system/: __init__.py
storage/csv/: hand_landmarks.csv
storage/nn_models/: gesture_classifier.pkl
