[project]
name = "recog-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jaderson rodrigues", email = "jadersonrilidio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
